<resources>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_connect">Connect</string>
    <string name="app_name">Bio_Console</string>
	<string name="sys_setting">System Settings</string>
	<string name="settings">Settings</string>
	<string name="english">English</string>
	<string name="chinese">简体中文</string>
	<string name="sys_version">Versions</string>
	<string name="set_flow">Flow(mL/Min)</string>
    <string name="time">Time(HH:mm:ss)</string>
	<string name="mode_liver_perfusion">Liver Perfusion System</string>
	<string name="mode_kidney_perfusion">Kidney Perfusion System</string>
	<string name="display_pump_speed">Pump Speed(RPM)</string>
	<string name="right_kidney_artery_target_speed">Right Kidney Artery Pump Speed</string>
	<string name="left_kidney_artery_target_speed">Left Kidney Artery Pump Speed</string>
	<string name="hepatic_artery_target_speed">Hepatic Artery Pump Speed</string>
	<string name="portal_vein_target_speed">Portal Vein Pump Speed</string>
	<string name="hepatic_artery_pressure">Hepatic Artery Pressure(mmHg)</string>
	<string name="portal_vein_pressure">Portal Vein Pressure(mmHg)</string>
	<string name="hepatic_artery_flow">Hepatic Artery Flow(mL/min)</string>
	<string name="portal_vein_flow">Portal Vein Flow(mL/min)</string>
	<string name="preset_perfusion_left_kidney_pressure">Left Kidney Pressure(mmHg)</string>
	<string name="preset_perfusion_right_kidney_pressure">Right Kidney Pressure(mmHg)</string>
	<string name="preset_perfusion_left_kidney_flow">Left Kidney Flow(mL/min)</string>
	<string name="preset_perfusion_right_kidney_flow">Right Kidney Flow(mL/min)</string>
	<string name="preset_param_id_prefix_liver">Liver</string>
	<string name="preset_param_id_prefix_kidney">Kidney</string>
	<string name="mean_pressure">Mean Pressure(mmHg)</string>
	<string name="systolic_pressure">SYS(mmHg)</string>
	<string name="diastolic_pressure">DIA(mmHg)</string>
	<string name="target_pressure">Target Pressure(mmHg)</string>
	<string name="target_vein_flow">PV Target Flow(mL/min)</string>
	<string name="target_artery_flow">HA Target Flow(mL/min)</string>
	<string name="target_flow">Target Flow(mL/min)</string>
	<string name="hepatic_artery">Hepatic Artery</string>
	<string name="portal_vein">Portal Vein</string>
	<string name="left_kidney_artery">Left Kidney Artery</string>
	<string name="right_kidney_artery">Right Kidney Artery</string>
	<string name="cm">Bubble(mm)</string>
	<string name="pulse_rate">Pulse Rate</string>
	<string name="temperature">Temp(℃)</string>
	<string name="title_perfusion_param_pulserate">LA/RA Pulse Rate</string>
	<string name="string_null">---</string>
	<string name="string_text_division">/</string>
	<string name="zero_value">00</string>
	<string name="zero">0</string>
	<string name="colon">:</string>
	<string name="stop">Stop</string>
	<string name="restart">Restart</string>
	<string name="set_pumpspeed">Set Pump Speed</string>
	<string name="pump_speed">PUMP</string>
	<string name="data_record">Record</string>
	<string name="screenshot">Screenshot</string>
	<string name="main_exitperfusion">Exit</string>
	<string name="bloodgas">BloodGas</string>
	<string name="bile">Bile(drops)/(mL)</string>
	<string name="resistant_index">Resistant Index</string>
	<string name="record_title_artery_mean_pressure">HA Mean Presssure(mmHg)</string>
	<string name="record_title_vein_mean_pressure">PV Presssure(mmHg)</string>
	<string name="record_title_artery_mean_flow">HA Flow(mL/min)</string>
	<string name="record_title_vein_mean_flow">PV Flow(mL/min)</string>
	<string name="record_title_artery_dia_pressure">HA DIA Presssure(mmHg)</string>
	<string name="record_title_artery_sys_pressure">HA SYS Presssure(mmHg)</string>
	<string name="record_title_artery_resistindex">HA ResistIndex</string>
	<string name="record_title_left_kidney_artery_dia_pressure">LA DIA Presssure(mmHg)</string>
	<string name="record_title_left_kidney_artery_sys_pressure">LA SYS Presssure(mmHg)</string>
	<string name="record_title_left_kidney_artery_resistindex">LA ResistIndex</string>
	<string name="record_title_artery_ehbf">HA EHBF(mL/min/100g)</string>
	<string name="record_title_vein_ehbf">PV EHBF(mL/min/100g)</string>
	<string name="record_title_vein_resistindex">PV ResistIndex</string>
	<string name="record_title_right_kidney_artery_resistindex">RA ResistIndex</string>
	<string name="record_title_artery_speed">HA Pump Speed(RPM)</string>
	<string name="record_title_vein_speed">PV Pump Speed(RPM)</string>
	<string name="record_title_left_kidney_artery_speed">LA Pump Speed(RPM)</string>
	<string name="record_title_right_kidney_artery_speed">RA Pump Speed(RPM)</string>
	<string name="record_title_bile_total">Total(Drop)</string>
	<string name="record_chart_total_bile_title">Total Bile(Drop)</string>
	<string name="record_chart_perhour_hour_title">Bile Production(Drop/per hour)</string>
	<string name="screenshot_succee">Screenshot success</string>
	<string name="record_title_trend_bile_total">Bile per hour secretion trend</string>
	<string name="record_title_trend_bile_perhour">The bile secretion(mL/per hour)</string>
	<string name="record_title_trend_bile_totle">Total bile secretion(mL/per hour)</string>
	<string name="save">Save</string>
	<string name="liver_weight">Input Liver Weight(g)</string>
	<string name="liver_number">Input Liver number</string>
	<string name="current_target_temp">Curt. Temp.</string>
	<string name="set_target_temp">Set Target Temp.</string>
	<string name="success_zero_hepatic_artery_pressure">zero hepatic artery pressure success</string>
	<string name="success_zero_hepatic_artery_flow">zero hepatic artery flow success</string>
	<string name="success_zero_portal_vein_pressure">zero portal vein pressure success</string>
	<string name="success_zero_portal_vein_flow">zero portal vein flow success</string>
	<string name="success_zero_left_kidney_artery_pressure">zero left kidney artery pressure success</string>
	<string name="success_zero_left_kidney_artery_flow">zero left kidney artery flow success</string>
	<string name="success_zero_right_kidney_artery_pressure">zero right kidney artery pressure success</string>
	<string name="success_zero_right_kidney_artery_flow">zero right kidney artery flow success</string>
	<string name="system_preset">System Pre-set</string>
	<string name="please_input_the_weight_of_liver">Please input the liver weight(g)</string>
	<string name="please_input_the_livernumber">Please input the liver number</string>
	<string name="next">Next</string>
	<string name="done">Done</string>
	<string name="complete">Complete</string>
	<string name="hepatic_artery_target_pressure">Hepatic Artery Target Pressure(mmHg)</string>
	<string name="portal_vein_target_pressure">Portal Vein Target Pressure(mmHg)</string>
	<string name="portal_vein_target_flow">Portal Vein Target Flow(mL/min)</string>
	<string name="zero_pressure">Zero Pressure(mmHg)</string>
	<string name="bottom_pressure">Bottom Pressure(mmHg)</string>
	<string name="zero_art_flow">Zero Artery Flow(mL/min)</string>
	<string name="zero_vein_flow">Zero Vein Flow(mL/min)</string>
	<string name="language">Language</string>
	<string name="version_update">Check for Updates</string>
	<string name="version_newest">Newest version</string>
	<string name="version_updates">Update Version</string>
	<string name="update_immediately">Update Now</string>
	<string name="update_later">Later</string>
	<string name="prompt">Prompt</string>
	<string name="update_error">Update error</string>
	<string name="internet_connect_unavailable">The network connection is not available</string>
	<string name="checking_version">Checking updates</string>
	<string name="download_version">downloading</string>
	<string name="update_cancel">cancel download</string>
	<string name="fail_to_link_server">Fail to link server,try again.</string>
	<string name="fail_to_update">Fail to update version,try again.</string>
	<string name="alarm_info">Alarm</string>
	<string name="alarm_time">Alarm Time</string>
	<string name="alarm_info_detail">Alarm information details</string>
	<string name="pump_type">Pump type</string>
	<string name="alarm_level">Alarm Level</string>
	<string name="id">ID</string>
	<string name="alarm">ALARM</string>
	<string name="chart_no_data">No Data</string>
	<string name="alarm_select_time_title">Select Date:</string>
	<string name="msg_index">Index</string>
	<string name="msg_time">Time</string>
	<string name="serial_data">Data</string>
	<string name="serial_trend">Trends</string>
	<string name="record_rb_title_bile">Bile Record</string>
	<string name="record_rb_title_perfusion">Perfusion Record</string>
	<string name="error_input_lower_speed">The input pump speed shall not be less than 400r/min</string>
	<string name="error_pre_one_max_less_than_min">the max value of the pressure of pump one is not less than the min value of the pressure.</string>
	<string name="error_pre_two_max_less_than_min">the max value of the pressure of pump two is not less than the min value of the pressure.</string>
	<string name="error_flow_one_max_less_than_min">The upper limit of the Hepatic Artery flow warning should not be lower than the lower limit.</string>
	<string name="error_flow_two_max_less_than_min">The upper limit of the Portal Vein flow warning should not be lower than the lower limit.</string>
	<string name="error_pre_left_kidney_artery_max_less_than_min">The upper limit of the Left Kidney Artery pressure warning should not be lower than the lower limit.</string>
	<string name="error_pre_right_kidney_artery_max_less_than_min">The upper limit of the Right Kidney Artery pressure warning should not be lower than the lower limit.</string>
	<string name="error_flow_left_kidney_artery_max_less_than_min">The upper limit of the Left Kidney Artery flow warning should not be lower than the lower limit.</string>
	<string name="error_flow_right_kidney_artery_max_less_than_min">The upper limit of the Right Kidney Artery flow warning should not be lower than the lower limit.</string>
	<string name="error_hepatic_artery_line">Hepatic Arterial line has a problem, please check</string>
	<string name="error_portal_vein_line">Portal Vein line has a problem, please check</string>
	<string name="error_left_kidney_artery_line">Left Kidney Arterial line has a problem, please check</string>
	<string name="error_right_kidney_artery_line">Right Kidney Arterial line has a problem, please check</string>
	<string name="error_speed_is_null">Please input the pump speed</string>
	<string name="patient_id">Patient ID</string>
	<string name="operator_id">Operater ID</string>
	<string name="parameter">Observation subID</string>
	<string name="result">Observation Value</string>
	<string name="result_type">Observation Indentifer</string>
	<string name="unit">Units</string>
	<string name="reference_range">Reference Range</string>
	<string name="user_define_access_check">User Defined Aeccess checks</string>
	<string name="date_time">Date Time</string>
	<string name="specimen_id">Specimen Index</string>
	<string name="specimen_source">Specimen Source</string>
	<string name="pre_temp_4">4</string>
	<string name="pre_temp_8">8</string>
	<string name="pre_temp_25">25</string>
	<string name="pre_temp_37">37</string>
	<string name="set_item_temp">Target Temperature(℃)</string>
	<string name="set_close_temp_control">Temp. Control</string>
	<string name="preset_temp_mode">Perfusion Temp Mode</string>
	<string name="preset_temp_normal_mode">NMP</string>
	<string name="preset_temp_cold_mode">HMP</string>
	<string name="system_set_time">Time</string>
	<string name="system_set_zone">Set Date,Set Time</string>
	<string name="system_set_wifi">Set Wifi</string>
	<string name="system_set_export">Export</string>
	<string name="system_set_disinfection_mode">Disinfection mode</string>
	<string name="system_set_export_content">Export Perfusion Record</string>
</resources>