<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/color_list_title_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal" >
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="2"
        android:text="@string/msg_time"/>  
   
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_mean_pre_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/preset_perfusion_left_kidney_pressure"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_syst_pre_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/record_title_left_kidney_artery_sys_pressure"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_dias_pre_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/record_title_left_kidney_artery_dia_pressure"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_prefreq_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:text="@string/pulse_rate"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_flow_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/preset_perfusion_left_kidney_flow"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_speed_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/record_title_left_kidney_artery_speed"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_resistindex_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:textSize="14sp"
        android:text="@string/record_title_left_kidney_artery_resistindex"/>
   
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_vein_pressure_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/record_title_vein_mean_pressure"/>
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_vein_flow_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/preset_perfusion_right_kidney_flow"/>
  <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_vein_speed_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:textSize="14sp"
        android:text="@string/record_title_right_kidney_artery_speed"/>
     <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_vein_resistindex_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:textSize="14sp"
        android:text="@string/record_title_right_kidney_artery_resistindex"/>
	
   <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/seial_msg_artery_temp_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="14sp"
        android:text="@string/temperature"/>
    
</LinearLayout>
