<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal" 
    android:layout_height="58dp"
    android:background="@color/color_list_title_bg"
    android:gravity="center_vertical">
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/item_bioindex_log_index"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id"/>  
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/item_bioindex_log_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/date_time"/>
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/item_bioindex_patient_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/patient_id"/>
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/item_bioindex_operator_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/operator_id"/>
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/item_bioindex_specimen_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/specimen_id"/>
    <TextView 
        style="@style/serialmsg_list_title_style"
        android:id="@+id/item_bioindex_specimen_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/specimen_source"/>

</LinearLayout>
