<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res/com.gidi.bio_console">
    <!-- 标题 -->
    <include 
        layout="@layout/module_include_base_title_layout"
        android:id="@+id/system_setting_title_layout"/>   
	<View 
        style="@style/style_divider_line"
        android:layout_below="@id/system_setting_title_layout"
        android:id="@+id/divider_line_one"
        android:background="@color/blue"/>
    <com.gidi.bio_console.view.SystemSettingItem 
        android:id="@+id/system_set_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_line_one"
        custom:title_icon="@drawable/system_set_time"
        custom:title_text="@string/system_set_time"
        custom:content_text="@string/system_set_zone">       
    </com.gidi.bio_console.view.SystemSettingItem>

 	<View 
 	    android:id="@+id/time_divider_line"
	    style="@style/horizontal_line"	    
	    android:layout_below="@id/system_set_time"/>  
	<!-- 语言 -->
	<com.gidi.bio_console.view.SystemSettingItem 
	    android:id="@+id/system_set_language"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/time_divider_line"
	    custom:title_icon="@drawable/system_set_language"
	    custom:title_text="@string/language"
	    custom:content_text="@string/english">       
	</com.gidi.bio_console.view.SystemSettingItem>    
 	
	<View 
 	    android:id="@+id/language_divider_line"
	    style="@style/horizontal_line"	   
	    android:layout_below="@id/system_set_language"/> 	
 	
	<com.gidi.bio_console.view.SystemSettingItem 
	    android:id="@+id/system_set_wifi"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone"
	    android:layout_below="@id/language_divider_line"
	    custom:title_icon="@drawable/system_set_wifi"
	    custom:title_text="@string/wlan_title"
	    custom:content_text="@string/system_set_wifi">       
	</com.gidi.bio_console.view.SystemSettingItem>	
	<View 
	    android:id="@+id/wifi_divider_line"
	    style="@style/horizontal_line"
	    android:layout_below="@id/system_set_wifi"/>
	<!-- 导出数据 -->
	<com.gidi.bio_console.view.SystemSettingItem 
	    android:id="@+id/system_set_output_record"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/wifi_divider_line"
	    custom:title_icon="@drawable/system_set_output"
	    custom:title_text="@string/system_set_export"
	    custom:content_text="@string/system_set_export_content">       
	 </com.gidi.bio_console.view.SystemSettingItem>
	 <View 
	    android:id="@+id/record_divider_line"
	    style="@style/horizontal_line"
	    android:visibility="gone"
	    android:layout_below="@id/system_set_output_record"/>
	 <!-- 消毒模式 -->
	 <com.gidi.bio_console.view.SystemSettingItem 
	    android:id="@+id/system_set_disinfection_mode"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/record_divider_line"
	    custom:title_icon="@drawable/system_set_output"
	    custom:title_text="@string/system_set_disinfection_mode"
	    android:visibility="gone"
	    custom:content_text="">       
	 </com.gidi.bio_console.view.SystemSettingItem>
	 <!-- 显示当前版本号 -->
	<View 
	    android:id="@+id/about_record_line"
	    android:layout_below="@id/system_set_output_record"
	    style="@style/horizontal_line"/>     
	<com.gidi.bio_console.view.SystemSettingItem 
	    android:id="@+id/system_set_aboutus"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/about_record_line"
	    custom:title_icon="@drawable/system_set_about"
	    custom:title_text="@string/module_aboutus_title"
	    custom:content_text="">       
	 </com.gidi.bio_console.view.SystemSettingItem>	   
	 <View 
	    android:id="@+id/about_devide_line"
	    android:layout_below="@id/system_set_aboutus"
	    style="@style/horizontal_line"/>   
	<RelativeLayout 
        android:id="@+id/system_setting_bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:paddingLeft="14dp"
        android:background="@drawable/common_main_title_bg"> 
        <ImageView 
            android:id="@+id/title_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/title_back"
            android:paddingRight="14dp"
            android:paddingLeft="14dp"
            android:contentDescription="@null"/>
	</RelativeLayout>
	<View 
	    android:id="@+id/empty_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/about_devide_line"
	    android:layout_above="@id/system_setting_bottom_layout"
	    android:background="@color/white"/>
</RelativeLayout>
