<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.gidi.bio_console"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="12dp"
    android:paddingTop="12dp" >

    <RelativeLayout 
        android:id="@+id/on_off_temp_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
			style="@style/style_set_item_textview"
	        android:id="@+id/open_close_tempctrl_title"
	        android:text="@string/set_close_temp_control"
	        android:textSize="@dimen/font_size_large_20sp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textStyle="bold"
	        android:textColor="@color/white"/>
        <CheckBox 
            style="@style/bubble_checkbox_style"
            android:id="@+id/temp_control_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_toRightOf="@id/open_close_tempctrl_title"
            android:layout_centerVertical="true"
	        android:layout_marginLeft="24dp"
            />
        
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/on_off_temp_mode_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/on_off_temp_layout">
        <TextView
			style="@style/style_set_item_textview"
	        android:id="@+id/tempctrl_mode_title"
	        android:text="@string/preset_temp_mode"
	        android:textSize="@dimen/font_size_large_20sp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textStyle="bold"
	        android:textColor="@color/white"/>

        <RadioGroup 
	        android:id="@+id/dlg_temp_mode_rg"
	        android:layout_width="480dp"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/tempctrl_mode_title"
            android:layout_centerVertical="true"
	        android:layout_marginLeft="24dp"
	        android:orientation="horizontal">
	        <RadioButton 
	            android:id="@+id/dlg_temp_hmp_rb"
	            android:layout_width="wrap_content"
	            android:layout_height="38dp"
	            android:gravity="center_vertical"
	            android:text="@string/preset_temp_cold_mode"
	            android:textColor="@color/white"
	            android:textStyle="bold"
	            android:textSize="@dimen/font_size_large_20sp"
	            android:button="@null"
	            android:drawableRight="@drawable/radiobutton_setting_perfusion_bg"
	            android:drawablePadding="8dp"/>
	
	        <RadioButton 
	            android:id="@+id/dlg_temp_nmp_rb"
	            android:layout_width="wrap_content"
	            android:layout_height="38dp"
	            android:layout_marginLeft="24dp"
	            android:text="@string/preset_temp_normal_mode"
	            android:textSize="@dimen/font_size_large_20sp"
	            android:textColor="@color/white"
	            android:textStyle="bold"
	            android:button="@null"
	            android:drawableRight="@drawable/radiobutton_setting_perfusion_bg"
	            android:drawablePadding="8dp"/>
	
	    </RadioGroup>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/target_temp_layout"
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:layout_below="@id/on_off_temp_mode_layout"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">   
	    <TextView
			style="@style/style_set_item_textview"
	        android:id="@+id/target_temp_title"
	        android:text="@string/set_item_temp"
	        android:textSize="@dimen/font_size_large_20sp"
	        android:layout_alignParentLeft="true"
	        android:textColor="@color/white"
	        android:textStyle="bold"/>
	    <TextView 
            style="@style/style_pre_setting_title_txt"
            android:id="@+id/dialog_setting_temp_txt"
            android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    	android:paddingBottom="12dp"
            android:layout_toRightOf="@id/target_temp_title"
            android:layout_marginLeft="16dp"
            android:text="@string/string_null"
            android:textColor="#FFD700"
            android:textSize="26sp"/>
	   <RadioGroup 
		    android:id="@+id/dialog_change_set_temp_radiogroup"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/target_temp_title"
		    android:layout_marginTop="18dp"
		    android:orientation="horizontal">
		    <RadioButton 
		        style="@style/preset_setting_temp_radiobutton"
		        android:id="@+id/dialog_change_set_temp_four_rb"
		        android:text="@string/pre_temp_4"/>

		    <RadioButton
		        style="@style/preset_setting_temp_radiobutton"
		        android:id="@+id/dialog_change_set_temp_eight_rb"
		        android:layout_marginLeft="24dp"
		        android:text="@string/pre_temp_8" />
		   
		    <RadioButton 
		        style="@style/preset_setting_temp_radiobutton"
		        android:id="@+id/dialog_change_set_temp_twenty_five_rb"
		        android:text="@string/pre_temp_25"
		        android:layout_marginLeft="24dp"/>
		   <RadioButton 
		        style="@style/preset_setting_temp_radiobutton"
		        android:id="@+id/dialog_change_set_temp_thirdty_seven_rb"
		        android:text="@string/pre_temp_37"
		        android:layout_marginLeft="24dp"/>		  
	  </RadioGroup>	  
      <com.gidi.bio_console.view.SystemKeyBoardEditText 
            android:id="@+id/dialog_change_set_temp_et"
            android:layout_width="102dp"
            android:layout_height="52dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:singleLine = "false"
            android:layout_below="@id/target_temp_title"
            android:layout_toRightOf="@id/dialog_change_set_temp_radiogroup"
            android:gravity="center"
            android:textColor="@color/color_temp_choice_selector"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:background="@drawable/shape_temp_choice_normal_bg"
            android:text="@string/string_null"
            custom:outSideCancel="true"
          	custom:keyDrawable="@drawable/btn_keyboard_key"
          	custom:xmlLayoutResId="@xml/keyboard_numbers"/>

	</RelativeLayout>
</RelativeLayout>
